-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
-
MeeGo 1.2 Harmattan SDK
X86/Arm
-
Ic6e6e2a0cf7ee5aa9f5bd6c91a8a6c31030c5848
SOFTWARE VERSION:
Qt Mobility 1.2.1+193
STEPS LEADING TO PROBLEM:
We're trying to create PySide python bindings for the class QNdefRecord, but in the linkage stage the binding complains about the missing symbol for the method QtMobility::qHash(QtMobility::QNdefRecord const&).
Searching in the source code we found out that this method is not being exported to the library.
EXPECTED OUTCOME:
The PySide binding works fine.
ACTUAL OUTCOME:
The binding complains about the symbol: _ZN10QtMobility5qHashERKNS_11QNdefRecordE
The following patch solves this problem:
— a/src/connectivity/nfc/qndefrecord.h
+++ b/src/connectivity/nfc/qndefrecord.h
@@ -115,7 +115,7 @@ private:
} \
QTM_END_NAMESPACE
-uint qHash(const QNdefRecord &key);
+Q_CONNECTIVITY_EXPORT uint qHash(const QNdefRecord &key);
QTM_END_NAMESPACE
| For Gerrit Dashboard: QTBUG-31951 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 59676,1 | Remove not needed symbol 'qHash(const QNdefRecord&)' | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 59917,1 | Export qHash(QNdefRecord) | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |