Remove not needed symbol 'qHash(const QNdefRecord&)'

Task-number: QTBUG-31951
Change-Id: If3d8c9dd5a848c2b0b60b533921a4933a63c4c92
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>
Reviewed-by: Alex <alexander.blasche@digia.com>