src/nfc/qndefrecord.cpp
@@ -43,8 +43,6 @@
 #include "qndefrecord.h"
 #include "qndefrecord_p.h"
 
-#include <QtCore/QHash>
-
 QT_BEGIN_NAMESPACE_NFC
 
 /*!
@@ -148,11 +146,6 @@ QT_BEGIN_NAMESPACE_NFC
 
     \sa Q_DECLARE_NDEF_RECORD()
 */
-
-uint qHash(const QNdefRecord &key)
-{
-    return qHash(key.type() + key.id() + key.payload());
-}
 
 /*!
     Constructs a new empty NDEF record.
